--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
     "bcryptjs": "^3.0.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.2.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
