--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
     "bcryptjs": "^3.0.2",
+    "country-flag-icons": "^1.5.18",
+    "date-fns": "^4.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.2.1",
     "next": "14.1.0",
@@ -23,6 +25,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
