--- a/package.json
+++ b/package.json
@@ -10,22 +10,31 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@shadcn/ui": "^0.0.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.18",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.485.0",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.2.1",
+    "mongoose": "^8.13.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
