Fix: Truck posts ve cargo posts sayfalarında createdBy null kontrolü eklendi

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB
-MONGODB_URI="mongodb+srv://mehmetdemirkok:i0E6OBiGY4yV8QsS@cluster0.3iekl.mongodb.net/VanFleetX"
+MONGODB_URI="mongodb+srv://mehmetdemirkok:i0E6OBiGY4yV8QsS@cluster0.3iekl.mongodb.net/VanFleetX?retryWrites=true&w=majority"
 
 # NextAuth.js
 NEXTAUTH_SECRET="your-secret-key"
