--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-table": "^8.21.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
@@ -36,7 +40,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.2",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
