--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.18",
     "date-fns": "^4.1.0",
@@ -46,6 +48,7 @@
     "next-auth": "^4.24.6",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.2",
